<resources>
    <string name="app_name">Randomizeer</string>
    <string name="OverallSize">What is the size to be chosen from?</string>
    <string name="submit">Submit</string>
    <string name="Names">Please enter the names of the people/things and seperate them with a comma \",\"</string>
    <string name="selected">What is the size to be selected from the size written above?</string>
    <string name="frank_paul_femi">Eg: Frank,Paul,Femi,Jacob</string>
    <string name="_20">Eg: 20</string>
    <string name="_3">Eg: 3</string>
    <string name="Back">Back</string>
    <string name="shinshil_com">shinshil.com</string>
    <string name="okoshinshil_gmail_com">okoshinshil@gmail.com</string>
    <string name="_ad_id_banner">4925692609690362/9769872568</string>
    <string name="_ad_id_interstitial">4925692609690362/1616050370</string>
    <string name="ad_id_banner">ca-app-pub-4925692609690362/9769872568</string>
    <string name="ad_id_interstitial">ca-app-pub-4925692609690362/1616050370</string>
    <string name="google_app_id">ca-app-pub-4925692609690362~4465574994</string>
    <string name="developed_by_shin_shil">Developed by Shin-Shil</string>
    <string name="textview">TextView</string>
</resources>
