<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Results">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="208dp"
        android:layout_height="17dp"
        android:text="@string/developed_by_shin_shil"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH85"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV80"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV20"
        app:layout_constraintTop_toTopOf="@+id/guidelineH83" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePointV10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".10" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePointV20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20194647" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePointV25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePointV37"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".37" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePointV50"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePointV62"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".62" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePointV75"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePointV80"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePointV90"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />
    <android.support.constraint.Guideline
        android:id="@+id/guidelineH44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />
    <android.support.constraint.Guideline
        android:id="@+id/guidelineH53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />
    <android.support.constraint.Guideline
        android:id="@+id/guidelineH75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />
    <android.support.constraint.Guideline
        android:id="@+id/guidelineH88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />
    <android.support.constraint.Guideline
        android:id="@+id/guidelineH91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />
    <TextView
        android:id="@+id/resultDisplay"
        android:layout_width="321dp"
        android:layout_height="205dp"
        android:background="@color/Black"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH39"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV90"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV10"
        app:layout_constraintTop_toTopOf="@+id/guidelineH12" />

    <TextView
        android:id="@+id/Website"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:text="@string/shinshil_com"
        android:autoLink="web"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH88"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV75"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV25"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH85"
        android:focusable="true" />
    <TextView
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:text="@string/okoshinshil_gmail_com"
        android:autoLink="email"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH91"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV75"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV25"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH88"
        android:focusable="true" />
    <!--<Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="0dp"/>-->
    <Button
        android:id="@+id/Back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_round"
        android:onClick="allButtonClickHandler"
        android:text="@string/Back"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineH75"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePointV90"
        app:layout_constraintLeft_toLeftOf="@+id/guidelinePointV50"
        app:layout_constraintRight_toRightOf="@id/guidelinePointV80"
        app:layout_constraintStart_toStartOf="@+id/guidelinePointV62"
        app:layout_constraintTop_toTopOf="@+id/guidelineH68"/>

</android.support.constraint.ConstraintLayout>
